--- a/index.html
+++ b/index.html
@@ -1,220 +1,283 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Personal Portfolio website design</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="portfolio.css">
-</head>
-<body>
-  <header class="header">
-    <a href="#" class="logo">portfolio</a>
-    <i class='bx bx-menu' id="menu-icon"></i>
-    <nav class="navbar">
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="portfolio.css" />
+  </head>
+  <body>
+    <header class="header">
+      <a href="#" class="logo">portfolio</a>
+      <i class="bx bx-menu" id="menu-icon"></i>
+      <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#education">Education</a>
         <a href="#skill">Skill</a>
         <a href="#project">Project</a>
         <a href="#contact">Contact</a>
-    </nav>
-  </header>  
-  <section class="home" id="home">
-    <div class="home-content">
-      <h3>Hello,it's Me</h3>
-      <h1>Jaliprava padhi</h1>
-      <h3>And I'am a <span class="multiple-text"></span></h3>
+      </nav>
+    </header>
+    <section class="home" id="home">
+      <div class="home-content">
+        <h3>Hello,it's Me</h3>
+        <h1>Jaliprava padhi</h1>
+        <h3>And I'am a <span class="multiple-text"></span></h3>
         <div class="social-media">
-        <a href="#"><i class='bx bxl-facebook'></i></a>
-        <a href="https://www.linkedin.com/in/jaliprava-padhi-29181a290"><i class='bx bxl-linkedin'></i></a>
-        <a href="https://github.com/Jaliprava-Padhi"><i class='bx bxl-github'></i></a>
-    </div>
-    <a href="portfolio cv.pdf"class="btn">Download CV</a>
-    </div>
-    <div class="home-img">
-      <img src="img 1.jpeg">
-    </div>
-  </section>
-  <!---------------------------------------About SEction-------------------------------------->
-  <section class="about" id="about">
-    <div class="about-img">
-      <img src="img 3.jpeg" width="290" height="320" style="border-radius: 20% ";>
-    </div>
-    <div class="about-content">
-      <h2 class="heading">About <span> Me</span></h2>
-      <h3>Data Analyst!</h3>
-      <p>Currently I am pursuing MCA at Gita Autonomous College,Bhubaneswar.I am proficient in Data Analysis using Power Bi and SQL and also Good 
-        knowledge of DBMS, also hava great intrest in Web Development.
-       <br>
-       <br>
-        I am an enthusiastic and self-motivating person, always like to take my challenges and work under pressure. Outside of work,
-        I like to play Badminton.
-       <br>
-       <br>
-        My goal is to brcomes a best Data Analyst and to be placed at a good company where I can augment my knowledge,skills,experiences and
-        contribute to the success of organization
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/jaliprava-padhi-29181a290"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
+          <a href="https://github.com/Jaliprava-Padhi"
+            ><i class="bx bxl-github"></i
+          ></a>
+        </div>
+        <a href="portfolio cv.pdf" class="btn">Download CV</a>
+      </div>
+      <div class="home-img">
+        <img src="img 1.jpeg" />
+      </div>
+    </section>
+    <!---------------------------------------About SEction-------------------------------------->
+    <section class="about" id="about">
+      <div class="about-img">
+        <img
+          src="img 3.jpeg"
+          width="290"
+          height="320"
+          style="border-radius: 20%"
+          ;
+        />
+      </div>
+      <div class="about-content">
+        <h2 class="heading">About <span> Me</span></h2>
+        <h3>Data Analyst!</h3>
+        <p>
+          Currently I am pursuing MCA at Gita Autonomous College,Bhubaneswar.I
+          am proficient in Data Analysis using Power Bi and SQL and also Good
+          knowledge of DBMS, also hava great intrest in Web Development.
+          <br />
+          <br />
+          I am an enthusiastic and self-motivating person, always like to take
+          my challenges and work under pressure. Outside of work, I like to play
+          Badminton.
+          <br />
+          <br />
+          My goal is to brcomes a best Data Analyst and to be placed at a good
+          company where I can augment my knowledge,skills,experiences and
+          contribute to the success of organization
+        </p>
+        <a href="#" class="btn">Hire Me</a>
+      </div>
+    </section>
+    <!-------------------------------------Education Section---------------------------------------->
+    <section class="education" id="education">
+      <h2 class="heading">My <span>Education</span></h2>
+      <div class="education-container">
+        <div class="education-box">
+          <h3>Matriculation</h3>
+          <div>Division:-First</div>
+          <div>
+            <mark><u>Mark:-77%</u></mark>
+          </div>
+          <div>Board:-BSE,Odisha</div>
+          <div>Year:-2017</div>
+          <div>
+            <u>Subject:-</u
+            ><br />Odia,English<br />Math,Science<br />Geography,Sanskrit
+          </div>
+        </div>
+        <div class="education-box">
+          <h3>Intermediate</h3>
+          <div>Division:-First</div>
+          <div>
+            <mark><u>Mark: 60%</u></mark>
+          </div>
+          <div>Board:-CHSE,Odisha</div>
+          <div>Year:-2019</div>
+          <div>
+            <u>Subject:-</u
+            ><br />Odia,English<br />Math,Physics<br />Chemistry,Biology
+          </div>
+        </div>
+        <div class="education-box">
+          <h3>Graduation</h3>
+          <div>Division:-First</div>
+          <div>
+            <mark><u>Mark:-75%</u></mark>
+          </div>
+          <div>Board: UTKAL UNIVERSITY,Odisha</div>
+          <div>Year:-2022</div>
+          <div>
+            <u>Subject:-</u><br />Mathematics<br />Physics<br />Chemistry
+          </div>
+        </div>
+        <div class="education-box">
+          <h3>Mca</h3>
+          <div>Division:-First</div>
+          <div>
+            <mark><u>Mark:-8.57sgpa</u></mark>
+          </div>
+          <div>Board:-BPUT,Odisha</div>
+          <div>Year:-Persuing</div>
+          <div>
+            <u>Subject:-</u><br />C, java,Dsa<br />DBMS,Os,Networking<br />Software
+            Engineering,python
+          </div>
+        </div>
+      </div>
+    </section>
+    <!----------------------------------------Skill Section--------------------------------->
+    <section class="skill" id="skill">
+      <h1 class="exp">My <span>Skills</span></h1>
 
-      </p>
-         <a href="#" class="btn">Hire Me</a>
-    </div>
-  </section>
-  <!-------------------------------------Education Section---------------------------------------->
-<section class="education" id="education">
-  <h2 class="heading">My <span>Education</span></h2>
-  <div class="education-container">
-    <div class="education-box">
-      <h3>Matriculation</h3>
-      <div>Division:-First</div>
-      <div><mark><u>Mark:-77%</u></mark></div>
-      <div>Board:-BSE,Odisha</div>
-      <div>Year:-2017</div>
-      <div><u>Subject:-</u><br>Odia,English<br>Math,Science<br>Geography,Sanskrit</div>
-    </div>
-    <div class="education-box">
-      <h3>Intermediate</h3>
-      <div>Division:-First</div>
-      <div><mark><u>Mark: 60%</u></mark></div>
-      <div>Board:-CHSE,Odisha</div>
-      <div>Year:-2019</div>
-      <div><u>Subject:-</u><br>Odia,English<br>Math,Physics<br>Chemistry,Biology</div>
-    </div>
-    <div class="education-box">
-      <h3>Graduation</h3>
-      <div>Division:-First</div>
-      <div><mark><u>Mark:-75%</u></mark></div>
-      <div>Board: UTKAL UNIVERSITY,Odisha</div>
-      <div>Year:-2022</div>
-      <div><u>Subject:-</u><br>Mathematics<br>Physics<br>Chemistry</div>
-    </div>
-    <div class="education-box">
-      <h3>Mca</h3>
-      <div>Division:-First</div>
-      <div><mark><u>Mark:-8.57sgpa</u></mark></div>
-      <div>Board:-BPUT,Odisha</div>
-      <div>Year:-Persuing</div>
-      <div><u>Subject:-</u><br>C, java,Dsa<br>DBMS,Os,Networking<br>Software Engineering,python</div>
-    </div>
-  </div>
-</section>
-<!----------------------------------------Skill Section--------------------------------->
-   <section class="skill" id="skill">  
-  <h1 class="exp">My <span>Skills</span></h1> 
-  
-  <div class="skill">
-    <div class="box">
-      <h4>C PROGRAMMING</h4>
-      <div class="progress-bar" value ="70%">
-        <div class="progress-line" style="max-width:70%"></div>
-      </div>
-      </div>
+      <div class="skill">
+        <div class="box">
+          <h4>C PROGRAMMING</h4>
+          <div class="progress-bar" value="70%">
+            <div class="progress-line" style="max-width: 70%"></div>
+          </div>
+        </div>
 
-    
-    <div class="box">
-      <h4>PYTHON</h4>
-      <div class="progress-bar" value="70%">
-        <div class="progress-line" style="max-width:80%"></div>
+        <div class="box">
+          <h4>PYTHON</h4>
+          <div class="progress-bar" value="70%">
+            <div class="progress-line" style="max-width: 80%"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>SQL</h4>
+          <div class="progress-bar" value="90%">
+            <div class="progress-line" style="max-width: 90%"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>DATABASE</h4>
+          <div class="progress-bar" value="90%">
+            <div class="progress-line" style="max-width: 90%"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>EXCEL</h4>
+          <div class="progress-bar" value="70%">
+            <div class="progress-line" style="max-width: 80%"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>POWER BI</h4>
+          <div class="progress-bar" value="90%">
+            <div class="progress-line" style="max-width: 90%"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>HTML</h4>
+          <div class="progress-bar" value="70%">
+            <div class="progress-line" style="max-width: 90%"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>CSS</h4>
+          <div class="progress-bar" value="60%">
+            <div class="progress-line" style="max-width: 80%"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>JAVASCRIPT</h4>
+          <div class="progress-bar" value="50%">
+            <div class="progress-line" style="max-width: 70%"></div>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="box">
-      <h4>SQL</h4>
-      <div class="progress-bar" value="90%">
-        <div class="progress-line" style="max-width:90%"></div>
-  </div>
-    </div>
-    <div class="box">
-      <h4>DATABASE</h4>
-      <div class="progress-bar" value="90%">
-        <div class="progress-line" style="max-width:90%"></div>
+    </section>
+    <!-----------------------------------------project section-------------------->
+    <section class="project" id="project">
+      <h2 class="heading">Latest <span>Project</span></h2>
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="project 1.jpeg" alt="" />
+          <div class="portfolio-layer">
+            <h4 class="heading">
+              <a
+                href="https://github.com/Jaliprava-Padhi/Virat-Kohli-Dashboard.git"
+                >Power Bi Virat-Kohli-Dashboard Project for Beginners</a
+              >
+            </h4>
+            <p>
+              Analyse Virat Kohli Innings Data Created And Interactive Dashboard
+              using Power Bi.
+            </p>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <img src="project 2.jpeg" alt="" />
+          <div class="portfolio-layer">
+            <h4 class="heading">
+              <a
+                href="https://github.com/Jaliprava-Padhi/Madhav-Ecommerce-Sales-Dashboard-Power-bi.git"
+              >
+                Power Bi Sales dashboard Project for Beginners</a
+              >
+            </h4>
+            <p>
+              Designed a power bi dashboard for Madhav store to track and
+              analyse the online sales data across india.
+            </p>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <img src="project 3.webp" alt="" />
+          <div class="portfolio-layer">
+            <h4 class="heading">
+              <a href="https://github.com/Jaliprava-Padhi/Python-Project.git">
+                Python Project using Jupyter Notebook</a
+              >
+            </h4>
+            <p>
+              Performed exploratory data analysis on TB_Burden_Country Data
+              using python to improve the customer experience.
+            </p>
+          </div>
+        </div>
       </div>
-    </div>
-      <div class="box">
-      <h4>EXCEL</h4>
-      <div class="progress-bar" value="70%">
-        <div class="progress-line" style="max-width:80%"></div>
+    </section>
+    <!-----------------------------------------section contact-------------------------->
+    <section class="contact" id="contact">
+      <h2 class="heading">Contact <span>Me!</span></h2>
+      <form action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Full Name" />
+          <input type="email" placeholder="Email" />
+        </div>
+        <div class="input-box">
+          <input type="number" placeholder="Mobile Number" />
+          <input type="email" placeholder="Email Subject" />
+        </div>
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+        ></textarea>
+        <input type="Submit" value="Send Message" class="btn" />
+      </form>
+    </section>
+    <!------------------------------footer design------------->
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2024 by Jaliprava Padhi | All Rights Reserved.</p>
       </div>
-    </div>
-    <div class="box">
-      <h4>POWER BI</h4>
-      <div class="progress-bar" value="90%">
-        <div class="progress-line" style="max-width:90%"></div>
+      <div class="footer-iconTop">
+        <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
       </div>
-    </div>
-    <div class="box">
-      <h4>HTML</h4>
-      <div class="progress-bar" value="70%">
-        <div class="progress-line" style="max-width:90%"></div>
-      </div>
-    </div>
-    <div class="box">
-      <h4>CSS</h4>
-      <div class="progress-bar" value="60%">
-        <div class="progress-line" style="max-width:80%"></div>
-      </div>
-    </div>
-    <div class="box">
-      <h4>JAVASCRIPT</h4>
-      <div class="progress-bar" value="50%">
-        <div class="progress-line" style="max-width:70%"></div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-----------------------------------------project section-------------------->
-<section class="project" id="project">
-  <h2 class="heading">Latest <span>Project</span></h2>
-  <div class="portfolio-container">
-    <div class="portfolio-box">
-      <img src="project 1.jpeg" alt="" >
-      <div class="portfolio-layer">
-        <h4  class="heading"> <a href="https://github.com/Jaliprava-Padhi/Virat-Kohli-Dashboard.git">Power Bi Virat-Kohli-Dashboard Project for Beginners</a></h4>
-        <p>Analyse Virat Kohli Innings Data Created And Interactive Dashboard using Power Bi.</p>
-      </div>
-    </div>
-    <div class="portfolio-box">
-      <img src="project 2.jpeg" alt="">
-      <div class="portfolio-layer">
-        <h4 class="heading"> <a href="https://github.com/Jaliprava-Padhi/Madhav-Ecommerce-Sales-Dashboard-Power-bi.git"> Power Bi Sales dashboard Project for Beginners</a></h4>
-        <p>Designed a power bi dashboard for Madhav store to track and analyse the online sales data across india.</p>
-      </div>
-    </div>
-    <div class="portfolio-box">
-      <img src="project 3.webp" alt="">
-      <div class="portfolio-layer">
-        <h4 class="heading"> <a href="https://github.com/Jaliprava-Padhi/Python-Project.git"> Python Project using Jupyter Notebook</a></h4>
-        <p>Performed exploratory data analysis on TB_Burden_Country Data using python to improve the customer experience.</p>
-      </div>
-    </div>
-  </div>
-</section>
-<!-----------------------------------------section contact-------------------------->
-<section class="contact" id="contact">
-  <h2 class="heading">Contact <span>Me!</span></h2>
-  <form action="#">
-    <div class="input-box">
-      <input type="text" placeholder="Full Name">
-      <input type="email" placeholder="Email">
-
-    </div>
-    <div class="input-box">
-      <input type="number" placeholder="Mobile Number">
-      <input type="email" placeholder="Email Subject">
-    </div>
-    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-    <input type="Submit" value="Send Message" class="btn">
-  </form>
-</section>
-<!------------------------------footer design------------->
-<footer class="footer">
-  <div class="footer-text">
-    <p>Copyright &copy; 2024 by Jaliprava Padhi | All Rights Reserved.</p>
-  </div>
-  <div class="footer-iconTop">
-    <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-  </div>
-</footer>
-<script src="https://unpkg.com/scrollreveal"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-<script src="portfolio.js"></script>
-</body>
+    </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="portfolio.js"></script>
+  </body>
 </html>
